<resources>
    <string name="app_name">CrazyFood</string>
    <string name="appwidget_text">Go to app and add a widget</string>
    <string name="no_internet_display">No Internet.You can see only favourites.</string>
    <string name="loading">Loading…</string>
    <string name="mealsarray">meals</string>
    <string name="strMeal">strMeal</string>
    <string name="strMealThumb">strMealThumb</string>
    <string name="idMeal">idMeal</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="signed_out">Signed Out</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to learn your favourite recipe!</string>

    <string name="slide_2_title">Learn cooking</string>
    <string name="slide_2_desc">Serve food for your family and friends!</string>

    <string name="slide_3_title">More Information</string>
    <string name="slide_3_desc">Best description on every single recipe we provide!</string>

    <string name="google_signin_failed">Google sign in failed</string>
    <string name="signinfire">signInWithCredential:success</string>
    <string name="signinfailurefire">signInWithCredential:failure</string>
    <string name="slider_deo">Slider Demo</string>
    <string name="page_changed">Page Changed:</string>
    <string name="cupcake">CupCake</string>
    <string name="donut">Donut</string>
    <string name="ecliar">Eclair</string>
    <string name="froyo">Froyo</string>
    <string name="ginger">GingerBread</string>
    <string name="url1">http://androidblog.esy.es/images/cupcake-1.png</string>
    <string name="url2">http://androidblog.esy.es/images/donut-2.png</string>
    <string name="url3">http://androidblog.esy.es/images/eclair-3.png</string>
    <string name="url4">http://androidblog.esy.es/images/froyo-4.png</string>
    <string name="url5">http://androidblog.esy.es/images/gingerbread-5.png</string>
    <string name="mealurl">https://www.themealdb.com</string>
    <string name="fav">favourites</string>
    <string name="no_internet">No Internet</string>
    <string name="nofavdisplay">No Favourites</string>
    <string name="startermenu">Starter</string>
    <string name="vegeimenu">Vegetarian</string>
    <string name="desertmenu">Desert</string>
    <string name="favomenu">favourites</string>
    <string name="chickenmenu">Chicken</string>
    <string name="seafoodmenu">SeaFood</string>
    <string name="widgetadding">Added to Widget</string>
    <string name="instructions">Instructions:</string>
    <string name="title">Title:</string>
    <string name="favadding">Added to Favourites</string>
    <string name="favremoving">Removed from favourites</string>
    <string name="mealjsonarray">meals</string>
    <string name="idmealjsonn">idMeal</string>
    <string name="strmealjson">strMeal</string>
    <string name="categoryjson">strCategory</string>
    <string name="areajson">strArea</string>
    <string name="instructionsjson">strInstructions</string>
    <string name="mealthumdjson">strMealThumb</string>
    <string name="youtubejson">strYoutube</string>
    <string name="recipebtnmaingoing">Recipe</string>
    <string name="disconnect">Disconnect</string>
    <string name="signout">Signout</string>
    <string name="title_display">Title</string>
    <string name="instructions_display">Instructions:</string>
    <string name="click_here_to_play_video">CLICK HERE TO PLAY VIDEO</string>
    <string name="startersm">Starters</string>
    <string name="vegetarianm">Vegetarian</string>
    <string name="non_vegetarianm">Non-Vegetarian</string>
    <string name="chickenm">Chicken</string>
    <string name="seafoodm">Seafood</string>
    <string name="desertm">Desert</string>
    <string name="favouritesm">Favourites</string>
    <string name="widgeticon">widgetIcon</string>
    <string name="cilick_to_add_widget">Click menu icon to add to your widget</string>
    <string name="mealdburl">https://www.themealdb.com</string>
    <string name="youtubeparsekey">youtubeparse</string>
    <string name="jTitlekey">jTitle</string>
    <string name="firebaseuserid">Firebase User ID: 123456789abc</string>
    <string name="no_title">No Title</string>
    <string name="choose_a_non_veg">Choose any one non-veg item</string>
    <string name="accepted">OK</string>
    <string name="no_of_favourites">No of favourites:</string>
    <string name="scrollposition">Scrollposition</string>
    <string name="nocategory">-------</string>
    <string name="noarea">------</string>
    <string name="insempty">--------</string>
    <string name="nonetcantaddtowidget">No Internet cannot add to widget</string>
    <string name="display_recipe_image">Display Recipe Image</string>
    <string name="welcome_image">Welcome Image</string>
    <string name="signedout">Signedout</string>
    <string name="category">Category:</string>
    <string name="area">Area:</string>
    <string name="d">Loading...</string>
    <string name="sry">Starter</string>
</resources>
